force-app/main/default/objects/Tax_Brackets__mdt/Tax_Brackets__mdt.object-meta.xml
<CustomObject>
    <description>A list of tax brackets, their corresponding earnings ranges and tax rates.</description>
    <label>Tax Brackets</label>
    <pluralLabel>Tax Brackets</pluralLabel>
</CustomObject>