force-app/main/default/objects/Tax_Brackets__mdt/fields/Earning_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Earning_Maximum__c</fullName>
    <description>The top end of the earnings range for this tax bracket</description>
    <label>Earning Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>