force-app/main/default/objects/Tax_Brackets__mdt/fields/Earning_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Earning_Minimum__c</fullName>
    <description>The bottom end of the earning range</description>
    <label>Earning Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>